--- a/intro.html
+++ b/intro.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="Nukestar 0.1 documentation" href="index.html" />
     <link rel="next" title="Setup and Install" href="setup.html" />
-    <link rel="prev" title="Base Software" href="software_setup.html" /> 
+    <link rel="prev" title="Remote Access" href="users.html" /> 
   </head>
   <body role="document">
     <div class="related" role="navigation" aria-label="related navigation">
@@ -38,7 +38,7 @@
           <a href="setup.html" title="Setup and Install"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="software_setup.html" title="Base Software"
+          <a href="users.html" title="Remote Access"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">Nukestar 0.1 documentation</a> &raquo;</li> 
       </ul>
@@ -116,8 +116,8 @@ will exist on the cluster.  The admin should read up on the following topics:</p
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="software_setup.html"
-                        title="previous chapter">Base Software</a></p>
+  <p class="topless"><a href="users.html"
+                        title="previous chapter">Remote Access</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="setup.html"
                         title="next chapter">Setup and Install</a></p>
@@ -155,7 +155,7 @@ will exist on the cluster.  The admin should read up on the following topics:</p
           <a href="setup.html" title="Setup and Install"
              >next</a> |</li>
         <li class="right" >
-          <a href="software_setup.html" title="Base Software"
+          <a href="users.html" title="Remote Access"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">Nukestar 0.1 documentation</a> &raquo;</li> 
       </ul>
