--- a/intro.html
+++ b/intro.html
@@ -59,15 +59,16 @@ apparent that this new resource would need to be managed differently than the cu
 cluster available to NRE students.  Briefly, the old (2009-2014) Nukestar cluster consisted of
 6 machines totaling 214 cores.  These machines were essentially carbon copies of each other,
 with every node on the cluster having the same software installed.  This configuration did
-not scale. It is difficult to ensure all nodes always stay in perfect sync with regaurds to permissions and
+not scale. It is difficult to ensure all nodes always stay in perfect sync with regards to permissions and
 software packages.  In addition, there were many points of failure: each machine had a change of
-going down due to a bad hard drive.  To achive a scalibility a new stateless node management scheme has been
+going down due to a bad hard drive.  To achieve a scalability a new stateless node management scheme has been
 implemented and tested.</p>
-<p>In the new stateless compute node cluster management paradime, the compute nodes must retrieve their OS image via
-remote source to function.  This is known as PXE or diskless booting.  The compute nodes do not need to have a hardrive inside them - instead
-the compute nodes need access to a network storage pool.  The key benifit from this stateless comptue node arangement is that, to the user,
+<p>In the new stateless compute node cluster management paradigm, the compute nodes retrieve their OS image via a
+remote source to function.  This is known as PXE or diskless booting.  The compute nodes do not need to have a hard drive inside them - instead
+the compute nodes need access to a network storage pool.  The key benefit from this stateless compute node arrangement is that, to the user,
 the entire cluster looks like one machine: Software only needs to be installed once. Group, user, and
-permission changes are automatically propogated to all machines in the cluster.</p>
+permission changes are automatically propagated to all machines in the cluster.  In addition, fewer computers with hard
+disks means less points of failure.</p>
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
 <p class="last">A traditional single node Netword File System (NFS) share is not likely to handle the simultaneous demand of 48 different
@@ -89,11 +90,12 @@ Only a NFS share needs to be setup on the head node for adequeate FS performance
 is desired at some point in the future, Appendinx A provides some basic pointers on setting up the storage pool.
 Diskless compute nodes will still utilize PXE booting.</p>
 </div>
-<p>The physical layout of the Nukestar cluster is shown below.  The Router doubles as a firewall.  Only
-3 compute nodes are shown, however, many more may exist (5 as of fall 2015).  Another benifit of the
-stateless compute node setup is that a new compute node can be added to the cluster by connecting it to the
+<p>The physical layout of the Nukestar cluster is shown below.  The Router doubles as a firewall (not shown is a network
+switch that is connected to the LAN side of the router/firewall).  Only
+3 compute nodes are shown, however, many more may exist.  Another benefit of the
+stateless compute node setup is that a new compute node can be easily added to the cluster by connecting it to the
 switch, assigning it a static IP, enabling PXE boot up in the bios, and powering it on.</p>
-<a class="reference internal image-reference" href="_images/nukestar.png"><img alt="_images/nukestar.png" class="align-center" src="_images/nukestar.png" style="width: 502.6px; height: 339.5px;" /></a>
+<a class="reference internal image-reference" href="_images/nukestar.png"><img alt="_images/nukestar.png" class="align-center" src="_images/nukestar.png" /></a>
 <p>The documentation will cover:</p>
 <ul class="simple">
 <li>Firewall/router setup</li>
@@ -180,7 +182,7 @@ will exist on the cluster.  The admin should read up on the following topics:</p
     </div>
     <div class="footer" role="contentinfo">
         &copy; Copyright 2014, william gurecky.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3.1.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3.5.
     </div>
   </body>
 </html>
