gh-pages docs for commit 12f2ede Author: nukestarRoot <william.gurecky@gmail.com>
    updated docs with new torque/maui guide

--- a/intro.html
+++ b/intro.html
@@ -95,7 +95,7 @@ switch that is connected to the LAN side of the router/firewall).  Only
 3 compute nodes are shown, however, many more may exist.  Another benefit of the
 stateless compute node setup is that a new compute node can be easily added to the cluster by connecting it to the
 switch, assigning it a static IP, enabling PXE boot up in the bios, and powering it on.</p>
-<a class="reference internal image-reference" href="_images/nukestar.png"><img alt="_images/nukestar.png" class="align-center" src="_images/nukestar.png" /></a>
+<a class="reference internal image-reference" href="_images/nukestar.png"><img alt="_images/nukestar.png" class="align-center" src="_images/nukestar.png" style="width: 502.6px; height: 339.5px;" /></a>
 <p>The documentation will cover:</p>
 <ul class="simple">
 <li>Firewall/router setup</li>
@@ -182,7 +182,7 @@ will exist on the cluster.  The admin should read up on the following topics:</p
     </div>
     <div class="footer" role="contentinfo">
         &copy; Copyright 2014, william gurecky.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3.5.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3.1.
     </div>
   </body>
 </html>
